tests/tests/ui/invalid_bool_with_integer_type.stderr
error: Invalid column type 'integer(4)' for field of type 'bool'. Boolean fields are compatible with: boolean. Did you mean: #[column(type = boolean)]?
  --> tests/ui/invalid_bool_with_integer_type.rs:10:5
   |
10 |     #[column(type = integer(4))]
   |     ^
